welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:19: error: method finTest has return statement; needs result type
	return a
        ^