welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
  baisseBrosse;
  while (!finTest){
    if (!estFaceMur){
      avance;
    }else{droite;
         if (estFaceMur){
           gauche;gauche;avance;gauche;
         }else{avance;droite;}
         }
  }
}

def finTest={
  var a:Boolean=false
  if (getDirection==Direction.OUEST&&estFaceMur){
    a=true
  }else{a=false}
	return a
}
